manifest/objects/SBQQ__LineColumn__c.object
<CustomObject>
    <customHelpPage>SBQQ__LineColumnHelp</customHelpPage>
    <description>Definition of a column in line item table on quote document.</description>
    <fields>
        <fullName>SBQQ__Alignment__c</fullName>
        <description>Determines how the column label and values are aligned.</description>
        <inlineHelpText>Determines how the column label and values are aligned.</inlineHelpText>
        <label>Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                    <default>true</default>
                    <label>Left</label>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BottomMargin__c</fullName>
        <defaultValue>3</defaultValue>
        <description>This is the bottom margin in pixels.</description>
        <inlineHelpText>The amount of space in pixels between bottom border and content.</inlineHelpText>
        <label>Bottom Margin (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ColumnHeadingField__c</fullName>
        <description>The API name of the field on quote object that sources value for this column&apos;s heading.</description>
        <inlineHelpText>The field that sources the dynamic heading for this column.</inlineHelpText>
        <label>Column Heading Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConditionalPrintField__c</fullName>
        <description>Field on quote object that controls whether this column prints on generated PDF document.</description>
        <inlineHelpText>Field on quote object that controls whether this column prints on generated PDF document.</inlineHelpText>
        <label>Conditional Print Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Line Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>Order in which the column hosting this field is displayed.</description>
        <inlineHelpText>Order in which the column hosting this field is displayed.</inlineHelpText>
        <label>Display Order</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicNumberScale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The decimal scale for numbers in the column are set based on the largest precision in the column.</description>
        <inlineHelpText>The decimal scale for numbers in the column are set based on the largest precision in the column.</inlineHelpText>
        <label>Dynamic Number Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__FieldName__c</fullName>
        <description>Field name relative to the Quote Line object.</description>
        <inlineHelpText>API name for the field on the Quote Line object you want displayed in this column.</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FontFamily__c</fullName>
        <description>Font family that should be applied to text in this column.</description>
        <inlineHelpText>Select font family to apply to this column. Leaving blank inherits form the template.</inlineHelpText>
        <label>Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Noto Sans TC</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FontSize__c</fullName>
        <description>Size of font (in points) applied to this column.</description>
        <inlineHelpText>Specify font size (in points) for text in this column. Leaving black inherits from the template.</inlineHelpText>
        <label>Font Size (pt)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__FontWeight__c</fullName>
        <description>Weight of font applied to this column.</description>
        <inlineHelpText>Specify font weight for text in this column. Leaving blank defaults to &quot;Normal&quot;.</inlineHelpText>
        <label>Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Bold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HeadingTextColor__c</fullName>
        <description>Color (in Hex) applied to text in the heading of this column.</description>
        <inlineHelpText>Specify color (in Hex) for text in the heading of this column. Leaving blank inherits from text color for this column.</inlineHelpText>
        <label>Heading Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HideOnComponents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides value in this column if line item is a Product Option.</description>
        <inlineHelpText>Hides value in this column if line item is a Product Option.</inlineHelpText>
        <label>Hide On Product Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__LeftMargin__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Left margin in pixels.</description>
        <inlineHelpText>Amount of space in pixels between left border and content.</inlineHelpText>
        <label>Left Margin (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RightMargin__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Right margin in pixels.</description>
        <inlineHelpText>Amount of space in pixels between right border and content.</inlineHelpText>
        <label>Right Margin (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RollUp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this field should be rolled up into master line. Only applicable if Roll-Up Field is specified on the template.</description>
        <inlineHelpText>Indicates whether this field should be rolled up into master line. Only applicable if Roll-Up Field is specified on the template.</inlineHelpText>
        <label>Roll Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Section__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Section to which this line column applies. No section means the column applies to all sections.</description>
        <inlineHelpText>Section to which this line column applies. No section means the column applies to all sections.</inlineHelpText>
        <label>Section</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__Template__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__TemplateSection__c.SBQQ__Template__c</valueField>
            </filterItems>
            <filterItems>
                <field>SBQQ__TemplateSection__c.SBQQ__Content__r.SBQQ__Type__c</field>
                <operation>equals</operation>
                <value>Line Items</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__TemplateSection__c</referenceTo>
        <relationshipLabel>Line Columns</relationshipLabel>
        <relationshipName>LineColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SeparateLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether this field is printed on its own separate line.</description>
        <inlineHelpText>Select the checkbox in order for this field to be printed on its own line. Use for long text fields such as product description.</inlineHelpText>
        <label>Separate Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubGroupSummaryLabel__c</fullName>
        <description>Summary label for sub Group level.</description>
        <inlineHelpText>Summary label for sub Group level.</inlineHelpText>
        <label>Sub Group Summary Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SummaryFontWeight__c</fullName>
        <description>Weight of font applied to text in the summary row.</description>
        <inlineHelpText>Specify font weight for text in the summary row for this column Leaving blank defaults to font weight for the column overall.</inlineHelpText>
        <label>Summary Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Bold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SummaryFunction__c</fullName>
        <description>Function used to summarize values in this column.</description>
        <inlineHelpText>Function used to summarize values in this column.</inlineHelpText>
        <label>Summary Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SummaryLabel__c</fullName>
        <description>Label output for this column in the summary row.</description>
        <inlineHelpText>Label output for this column in the summary row.</inlineHelpText>
        <label>Summary Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SummaryLevel__c</fullName>
        <description>Level this column should be summarized at.</description>
        <inlineHelpText>Set the level on which this column should be summarized.</inlineHelpText>
        <label>Summary Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Sub Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SummaryShadingColor__c</fullName>
        <description>Color (in Hex) applied to cell background in the summary row for this column.</description>
        <inlineHelpText>Specify color (in Hex) for cell background in the summary row for this column. Leaving blank inherits shading color for the template.</inlineHelpText>
        <label>Summary Shading Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SummaryTextColor__c</fullName>
        <description>Color (in Hex) applied to text in the summary row for this column.</description>
        <inlineHelpText>Specify color (in Hex) for text in the summary row for this column. Leaving blank inherits from text color for this column.</inlineHelpText>
        <label>Summary Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Template__c</fullName>
        <description>Template on which this field is to be displayed.</description>
        <inlineHelpText>Template on which this field is to be displayed.</inlineHelpText>
        <label>Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Line Columns</relationshipLabel>
        <relationshipName>LineColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__TextColor__c</fullName>
        <description>Color (in Hex) applied to text in this column.</description>
        <inlineHelpText>Specify color (in Hex) for text in this column. Leaving blank inherits from the template.</inlineHelpText>
        <label>Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TopMargin__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Top margin in pixels.</description>
        <inlineHelpText>Amount of space in pixels between top border and content.</inlineHelpText>
        <label>Top Margin (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__WidthDiscardedWhenHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether width of this column is re-allocated to another column or discarded when the column is dynamically hidden.</description>
        <inlineHelpText>Select the checkbox for conditionally displayed column to replace another column(s). Leaving this box unselected will re-allocate width of this column when it&apos;s hidden to another column therefore keeping table width unchanged.</inlineHelpText>
        <label>Discard Width When Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Width__c</fullName>
        <description>Width of the column taken up by this field.</description>
        <inlineHelpText>Width (percentage) of the column taken up by this field.</inlineHelpText>
        <label>Width</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Line Column</label>
    <nameField>
        <label>Column Heading</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>